# panaroia

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.txt
include/panaroia/: panaroia.h
interfaces/panaroia-imgui/: CMakeLists.txt  main.cpp  panaroiacontroller.cpp  panaroiacontroller.h
roms/: INFO.txt
src/: panaroia.c
tests/: CMakeLists.txt  panaroia_tests.c
